# dylib-workflow

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  calcit.cirru  compact.cirru  deps.cirru
.github/workflows/: check.yaml
src/: lib.rs
