[package]
name = "calcit_std"
version = "0.0.3"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2018"

[lib]
name = "calcit_std"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.1.12"
cirru_parser = "0.1.8"
