[package]
name = "calcit_dylib"
version = "0.0.1"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"

[lib]
name = "calcit_std"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.6.13"
cirru_parser = "0.1.31"
